created a section for product positions

--- a/index.html
+++ b/index.html
@@ -17,6 +17,79 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="styles/product.css" />
   </head>
-  <body></body>
+  <body>
+    <section class="product">
+      <div class="container">
+        <div class="product__title">
+          <h1 class="heading">Save on our most selled items.</h1>
+          <p class="text">
+            Our new Limited Edition Winter Design BESPOKE 4-Door Flex™
+          </p>
+        </div>
+
+        <div class="product__box">
+          <div class="product__item">
+            <img
+              class="product__macbook-img"
+              src="img/pro.png"
+              alt="macbook-image"
+            />
+            <div class="product__description">
+              <h2 class="product__description-heading">MacBook Pro 13</h2>
+              <p class="product__description-text product__description-macbook">
+                Neque porro quisquam est qui dolorem ipsum quia dolor sit amet
+              </p>
+              <span class="product__description-price">$ 1,200.00 USD</span>
+            </div>
+          </div>
+
+          <div class="product__item">
+            <img
+              class="product__watch-img"
+              src="img/watch3.png"
+              alt="watch-image"
+            />
+            <div class="product__description">
+              <h2 class="product__description-heading">Smart Galaxy Watch 3</h2>
+              <p class="product__description-text">
+                Neque porro quisquam est qui dolorem ipsum quia dolor sit amet,
+                consectetur, adipisci velit...
+              </p>
+              <span class="product__description-price">$ 199.00 USD</span>
+            </div>
+          </div>
+
+          <div class="product__item">
+            <img class="product__m1-img" src="img/m1.png" alt="m1-image" />
+            <div class="product__description">
+              <h2 class="product__description-heading">MacBook Air M1</h2>
+              <p class="product__description-text">
+                Neque porro quisquam est qui dolorem ipsum quia dolor sit amet,
+                consectetur, adipisci velit...
+              </p>
+              <span class="product__description-price">$ 1,009.00 USD</span>
+            </div>
+          </div>
+
+          <div class="product__item">
+            <img
+              class="product__ipad-img"
+              src="img/lava.png"
+              alt="watch-image"
+            />
+            <div class="product__description">
+              <h2 class="product__description-heading">iPad</h2>
+              <p class="product__description-text">
+                Neque porro quisquam est qui dolorem ipsum quia dolor sit amet,
+                consectetur, adipisci velit...
+              </p>
+              <span class="product__description-price">$ 610.00 USD</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
