created an idea section

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="styles/offers.css" />
     <link rel="stylesheet" href="styles/best.css" />
     <link rel="stylesheet" href="styles/product.css" />
+    <link rel="stylesheet" href="styles/idea.css" />
   </head>
   <body>
     <section class="promo">
@@ -233,6 +234,34 @@
               </p>
               <span class="product__description-price">$ 610.00 USD</span>
             </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="idea">
+      <div class="container">
+        <div class="idea__title">
+          <h2 class="heading">Ideas have a place here</h2>
+          <p class="text">
+            Our new Limited Edition Winter Design BESPOKE 4-Door Flex™
+          </p>
+        </div>
+        <div class="idea__inner">
+          <img class="idea__img" src="img/book.png" alt="book" />
+          <div class="idea__box-text">
+            <p class="idea__text">
+              We Make It Easy To Find The Great Design Talent, Easier...
+            </p>
+            <p class="idea__text">
+              Road Design Handbook For The International Road...
+            </p>
+            <p class="idea__text">
+              The Best Kept Secrets About Creative People
+            </p>
+            <p class="idea__text">
+              We Make It Easy To Find The Great Design Talent, Easier...
+            </p>
           </div>
         </div>
       </div>
