created a review section

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="styles/best.css" />
     <link rel="stylesheet" href="styles/product.css" />
     <link rel="stylesheet" href="styles/idea.css" />
+    <link rel="stylesheet" href="styles/look.css" />
   </head>
   <body>
     <section class="promo">
@@ -263,6 +264,57 @@
               We Make It Easy To Find The Great Design Talent, Easier...
             </p>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="look">
+      <div class="container">
+        <div class="look__offer">
+          <h2 class="heading">Looking for anything else?</h2>
+          <a class="look__search" href="#"
+            ><img class="look__img" src="img/shop.svg" alt="glass"
+          /></a>
+          <form class="look__form">
+            <input
+              class="look__search-input"
+              type="search"
+              name="search"
+              placeholder="Search keyword"
+            />
+          </form>
+          <div class="look__link-box">
+            <a href="" class="look__link">iPhone</a>
+            <a href="" class="look__link">Charger</a>
+            <a href="" class="look__link">Gift</a>
+            <a href="" class="look__link">Google Pixel 3</a>
+            <a href="" class="look__link">Keyboard</a>
+            <a href="" class="look__link">13 Pro Max</a>
+            <a href="" class="look__link">iPhone 12</a>
+            <a href="" class="look__link">Laptop</a>
+            <a href="" class="look__link">Mobile</a>
+          </div>
+        </div>
+        <div class="look__thing">
+          <h2 class="heading">Never miss a thing</h2>
+          <p class="text">
+            Sign up for texts to be notified about our best offers on the
+            perfect gifts.
+          </p>
+          <img
+            class="look__devaice-img"
+            src="img/appledivices.png"
+            alt="divices-image"
+          />
+          <form class="look__form">
+            <input
+              class="look__input-email"
+              type="email"
+              name="email"
+              placeholder="Your email"
+            />
+            <button class="look__button">Sign up</button>
+          </form>
         </div>
       </div>
     </section>
