created a afooter  section

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="styles/product.css" />
     <link rel="stylesheet" href="styles/idea.css" />
     <link rel="stylesheet" href="styles/look.css" />
+    <link rel="stylesheet" href="styles/footer.css" />
   </head>
   <body>
     <section class="promo">
@@ -318,5 +319,84 @@
         </div>
       </div>
     </section>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__box">
+          <div class="footer__advertising">
+            <img class="logo" src="img/logo.svg" />
+            <p class="text footer__text">
+              Sign up for texts to be notified about our best offers on the
+              perfect gifts.
+            </p>
+          </div>
+          <ul class="footer__list">
+            <a href="" class="footer__link footer__link_fz"
+              ><li class="footer__list-item">All products</li></a
+            >
+            <a href="" class="footer__link"
+              ><li class="footer__list-item">Phones</li></a
+            >
+            <a href="" class="footer__link"
+              ><li class="footer__list-item">Watch</li></a
+            >
+            <a href="" class="footer__link"
+              ><li class="footer__list-item">Tablet</li></a
+            >
+            <a href="" class="footer__link"
+              ><li class="footer__list-item">Laptops</li></a
+            >
+          </ul>
+
+          <ul class="footer__list">
+            <a href="" class="footer__link footer__link_fz"
+              ><li class="footer__list-item">Company</li></a
+            >
+            <a href="" class="footer__link"
+              ><li class="footer__list-item">About</li></a
+            >
+            <a href="" class="footer__link"
+              ><li class="footer__list-item">Support</li></a
+            >
+          </ul>
+
+          <ul class="footer__list">
+            <a href="" class="footer__link footer__link_fz"
+              ><li class="footer__list-item">Support</li></a
+            >
+            <a href="" class="footer__link"
+              ><li class="footer__list-item">Style Guide</li></a
+            >
+            <a href="" class="footer__link"
+              ><li class="footer__list-item">Licensing</li></a
+            >
+            <a href="" class="footer__link"
+              ><li class="footer__list-item">Change Log</li></a
+            >
+            <a href="" class="footer__link"
+              ><li class="footer__list-item">Contact</li></a
+            >
+          </ul>
+
+          <ul class="footer__list">
+            <a href="" class="footer__link footer__link_fz"
+              ><li class="footer__list-item">Follow Us</li></a
+            >
+            <a href="" class="footer__link"
+              ><li class="footer__list-item">Instagram</li></a
+            >
+            <a href="" class="footer__link"
+              ><li class="footer__list-item">Facebook</li></a
+            >
+            <a href="" class="footer__link"
+              ><li class="footer__list-item">LinkedIn</li></a
+            >
+            <a href="" class="footer__link"
+              ><li class="footer__list-item">Youtube</li></a
+            >
+          </ul>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
