created a site header and removed borders from the container

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="styles/header.css" />
     <link rel="stylesheet" href="styles/promo.css" />
     <link rel="stylesheet" href="styles/offers.css" />
     <link rel="stylesheet" href="styles/best.css" />
@@ -26,6 +27,34 @@
     <link rel="stylesheet" href="styles/footer.css" />
   </head>
   <body>
+    <header class="header">
+      <div class="container">
+        <div class="header__inner">
+          <img class="header__logo" src="img/logo.svg" alt="logo-image" />
+
+          <ul class="header__list">
+            <a href="" class="header__link">
+              <li class="header__list-item">all products</li></a
+            >
+            <a href="" class="header__link">
+              <li class="header__list-item">Solutions</li></a
+            >
+            <a href="" class="header__link">
+              <li class="header__list-item">ABOUT</li></a
+            >
+            <a href="" class="header__link">
+              <li class="header__list-item">Support</li></a
+            >
+          </ul>
+
+          <div class="header__image">
+            <img class="header__shop" src="img/shop.svg" alt="glass-image" />
+            <img class="header__glass" src="img/glass.svg" alt="shop-image" />
+          </div>
+        </div>
+      </div>
+    </header>
+
     <section class="promo">
       <div class="container promo__container">
         <div class="promo__title">
